[workspace]
resolver = "2"
members = [
    "crates/rust-actions",
    "crates/rust-actions-macros",
    "examples/basic",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alexchoi0/rust-actions"
homepage = "https://github.com/alexchoi0/rust-actions"
documentation = "https://docs.rs/rust-actions"
keywords = ["testing", "bdd", "yaml", "github-actions", "async"]
categories = ["development-tools::testing"]
