[package]
name = "rust-actions-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Procedural macros for rust-actions BDD framework"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "parsing"] }
quote = "1"
proc-macro2 = "1"
walkdir = "2"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
