[package]
name = "rust-actions"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "BDD testing framework with GitHub Actions YAML syntax"

[dependencies]
rust-actions-macros = { path = "../rust-actions-macros" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1", features = ["full", "test-util"] }
async-trait = "0.1"
inventory = "0.3"
thiserror = "2.0"
colored = "2"
testcontainers = "0.23"
futures = "0.3"
rand = "0.8"
rand_chacha = "0.3"
uuid = { version = "1", features = ["v4"] }
regex = "1"
