[package]
name = "rust-actions-example"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "actions"
path = "tests/main.rs"

[dependencies]
rust-actions = { path = "../../crates/rust-actions" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
