[package]
name = "rust-actions-example"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[test]]
name = "features"
path = "tests/main.rs"

[dependencies]
rust-actions = { path = "../../crates/rust-actions" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
